--- a/python/templates/admin_upload.html
+++ b/python/templates/admin_upload.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="uk-flex-center" uk-grid>
     <div class="uk-card uk-card-body uk-width-3-4">
-        <form class="uk-form-stacked" method="post" action="/">
+        <form class="uk-form-stacked" method="post" action="/upload">
             <fieldset class="uk-fieldset">
                 <legend class="uk-legend uk-text-center">项目上传</legend>
                 <div class="uk-margin">
