--- a/python/templates/login.html
+++ b/python/templates/login.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 {% if info %}
-                <span class="uk-form-danger">{{info}}</span>
+                <div class="uk-alert-danger">{{info}}</div>
                 {% endif %}
                 <div class="uk-margin ">
                     <input class="uk-button uk-width-1-1 uk-button-primary" type="submit" value="登录">
