--- a/python/templates/base.html
+++ b/python/templates/base.html
@@ -29,7 +29,7 @@
             {% endif %}
             {% endfor %}
             <li>
-                <a href="#">当前用户：{{username}}</a>
+                <a href="#" style="text-transform: none">当前用户：{{username}}</a>
                 <div class="uk-navbar-dropdown" style="padding: 10px; margin: 0; width: 150px">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <li class="uk-active">
