--- a/python/templates/worker_index.html
+++ b/python/templates/worker_index.html
@@ -10,7 +10,7 @@
                 <th>类名</th>
                 <th>方法名</th>
                 <th>代码行</th>
-                <th>文件路径</th>
+                <th>发布时间</th>
                 <th>操作</th>
             </tr>
             </thead>
@@ -22,7 +22,7 @@
                 <td>{{alarm.classname}}</td>
                 <td>{{alarm.method}}</td>
                 <td>{{alarm.location}}</td>
-                <td>{{alarm.path}}</td>
+                <td>{{alarm.create_time}}</td>
                 <td style="padding: 12px">
                     <a href="/detail/{{alarm.id}}">
                         <button class="uk-button uk-button-default uk-button-small">查看详情</button>
