--- a/python/templates/worker_history.html
+++ b/python/templates/worker_history.html
@@ -10,7 +10,8 @@
                 <th>类名</th>
                 <th>方法名</th>
                 <th>代码行</th>
-                <th>文件路径</th>
+                <th>发布时间</th>
+                <th>审核时间</th>
                 <th>标记结果</th>
             </tr>
             </thead>
@@ -22,7 +23,8 @@
                 <td>{{alarm.classname}}</td>
                 <td>{{alarm.method}}</td>
                 <td>{{alarm.location}}</td>
-                <td>{{alarm.path}}</td>
+                <td>{{alarm.create_time}}</td>
+                <td>{{alarm.label_time}}</td>
                 {% if alarm.label == 1 %}
                     <td>正报</td>
                 {% elif alarm.label == 0 %}
